refactor(spi): separate status and reason semantics